--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,12 @@ jobs:
           echo DB_PORT=${{secrets.DB_PORT}} >> .env
           echo APP_HOST=${{secrets.APP_HOST}} >> .env
           echo APP_PORT=${{secrets.APP_PORT}} >> .env
+          echo IS_GOOGLE_AUTH_ENABLE=${{secrets.IS_GOOGLE_AUTH_ENABLE}} >> .env
+          echo TERMII_API_KEY=${{secrets.TERMII_API_KEY}} >> .env
+          echo TERMII_SEC_KEY=${{secrets.TERMII_SEC_KEY}} >> .env
+          echo SALTROUNDS=${{secrets.SALTROUNDS}} >> .env
+          echo SECRET=${{secrets.SECRET}} >> .env
+          echo WEB3_PROVIDER=${{secrets.WEB3_PROVIDER}} >> .env
 
 
           # pm2 restart 5
