--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^0.1.8",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.4",
+    "node-cron": "^3.0.3",
     "pm2": "^0.12.14",
     "sequelize": "^5.15.1",
     "serve-favicon": "~2.1.3",
