--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
   
-    # - run: npm install express-rate-limit
+    - run: npm install 
     # - run: npm install express-rate-limit
   # comment
     
@@ -36,7 +36,7 @@ jobs:
           echo DB_DIALECT=${{secrets.DB_DIALECT}} >> .env
           echo DB_PORT=${{secrets.DB_PORT}} >> .env
           echo APP_HOST=${{secrets.APP_HOST}} >> .env
-          echo APP_PORT=${{secrets.APP_PORT}} >> .env
+          echo PORT=${{secrets.PORT}} >> .env
           echo IS_GOOGLE_AUTH_ENABLE=${{secrets.IS_GOOGLE_AUTH_ENABLE}} >> .env
           echo TERMII_API_KEY=${{secrets.TERMII_API_KEY}} >> .env
           echo TERMII_SEC_KEY=${{secrets.TERMII_SEC_KEY}} >> .env
