--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
   
-    - run: npm install 
+    # - run: npm install 
     # - run: npm install express-rate-limit
   # comment
     
