--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
+    "ably": "^2.0.4",
     "axios": "^0.21.4",
+    "ethers": "^5.6.9",
     "bcrypt": "^5.1.1",
     "bluebird": "^2.9.25",
     "body-parser": "~1.8.1",
@@ -22,12 +24,15 @@
     "debug": "~2.0.0",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.10",
+    "erc-20-abi": "^1.0.1",
     "express": "~4.9.0",
+    "express-joi-validator": "^2.0.1",
     "express-rate-limit": "^7.2.0",
     "express-session": "^1.11.1",
-    "express-validation": "^4.1.0",
+    "express-validation": "^1.0.2",
     "handlebars": "^3.0.3",
     "jade": "~1.6.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^4.0.2",
     "morgan": "~1.3.0",
