--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-rate-limit": "^7.2.0",
     "express-session": "^1.11.1",
     "express-validation": "^1.0.2",
+    "flutterwave-node-v3": "^1.0.11",
     "handlebars": "^3.0.3",
     "jade": "~1.6.0",
     "joi": "^14.3.1",
@@ -40,6 +41,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.4",
     "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "pm2": "^0.12.14",
     "sequelize": "^5.15.1",
     "serve-favicon": "~2.1.3",
