updated workflow file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,21 @@ jobs:
           echo SALTROUNDS=${{secrets.SALTROUNDS}} >> .env
           echo SECRET=${{secrets.SECRET}} >> .env
           echo WEB3_PROVIDER=${{secrets.WEB3_PROVIDER}} >> .env
-
-
+          echo WATU_PUBLIC_KEY=${{secrets.WATU_PUBLIC_KEY}} >> .env
+          echo WATU_SECRET_KEY=${{secrets.WATU_SECRET_KEY}} >> .env
+          echo WATU_ENCRYPTION_KEY=${{secrets.WATU_ENCRYPTION_KEY}} >> .env
+          echo WATU_IV_KEY=${{secrets.WATU_IV_KEY}} >> .env
+          echo PRIVIDUS_BANK_ID=${{secrets.PRIVIDUS_BANK_ID}} >> .env
+          echo WATU_BASE_URL=${{secrets.WATU_BASE_URL}} >> .env
+          echo WATU_PIN=${{secrets.WATU_PIN}} >> .env
+          echo WATU_DEPOSIT_PUBLIC_KEY=${{secrets.WATU_DEPOSIT_PUBLIC_KEY}} >> .env
+          echo WATU_DEPOSIT_SECRET_KEY=${{secrets.WATU_DEPOSIT_SECRET_KEY}} >> .env
+          echo WATU_DEPOSIT_ENCRYPTION_KEY=${{secrets.WATU_DEPOSIT_ENCRYPTION_KEY}} >> .env
+          echo WATU_DEPOSIT_IV_KEY=${{secrets.WATU_DEPOSIT_IV_KEY}} >> .env
+          echo YOU_VERIFY_API_KEY=${{secrets.YOU_VERIFY_API_KEY}} >> .env
+          echo YOU_VERIFY_LIVE_API_KEY=${{secrets.YOU_VERIFY_LIVE_API_KEY}} >> .env
+          echo YOU_VERIFY_MAINNET_ENDPOINT=${{secrets.YOU_VERIFY_MAINNET_ENDPOINT}} >> .env
+          echo YOU_VERIFY_TESTNET_ENDPOINT=${{secrets.YOU_VERIFY_TESTNET_ENDPOINT}} >> .env
           echo KORA_PBK_LIVE_KEY=${{secrets.KORA_PBK_LIVE_KEY}} >> .env
 
           
