--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-validation": "^1.0.2",
     "flutterwave-node-v3": "^1.0.11",
     "handlebars": "^3.0.3",
+    "imgur": "^2.4.2",
     "jade": "~1.6.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^9.0.2",
