--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-mongo": "^0.8.1",
     "cookie-parser": "~1.3.3",
     "cors": "^2.6.0",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "debug": "~2.0.0",
     "dotenv": "^8.6.0",
