--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           echo PVCT=${{secrets.PVCT}} >> .env
           echo ENC_SECRET_KEY=${{secrets.ENC_SECRET_KEY}} >> .env
           echo ENC_SECRET_IV=${{secrets.ENC_SECRET_IV}} >> .env
-          echo PVCT=${{secrets.ENC_METHOD}} >> .env
+          echo ENC_METHOD=${{secrets.ENC_METHOD}} >> .env
 
           
     - name: 'Restart server'
